--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/NikosZoros3533/Full-Stack-Delivery-App" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
                     src="./assets/projectsUI/food-delivery.png"
