--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <article class="row">
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">
-                Photographer's Portofolio
+                Photographer's Portfolio
               </h3>
               <p class="project-wrapper__text-info">
                 I built a responsive photographer portfolio using React.js,
