--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://devfolio.js.org/" />
+    <meta property="og:url" content="https://nikoszoros3533.github.io/NikosZorosPortofolio/" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
     <meta property="og:title" content="[Nikos Zoros] | MERN Developer" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
@@ -43,7 +43,7 @@
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
       property="og:image"
-      content="https://devfolio.js.org/assets/NikosZorosPortofolio.png"
+      content="https://nikoszoros3533.github.io/NikosZorosPortofolio/assets/NikosZorosPortofolio.png"
     />
 
     <!-- link tags -->
@@ -65,22 +65,7 @@
       src="./javascript/scrollveal.js"
     ></script>
 
-    <!-- Remove Google Analytics once you have your portfolio website set-up -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-122228201-4"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
 
-      gtag("config", "UA-122228201-4");
-    </script>
-    <!-- End of Google Analytics -->
   </head>
   <body>
     <!-- Hero Section -->
