--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://devfolio.js.org/" />
+    <meta property="og:url" content="https://nikoszoros3533.github.io/NikosZorosPortofolio/" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
     <meta property="og:title" content="[Nikos Zoros] | MERN Developer" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
@@ -43,7 +43,7 @@
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
       property="og:image"
-      content="https://devfolio.js.org/assets/NikosZorosPortofolio.png"
+      content="https://nikoszoros3533.github.io/NikosZorosPortofolio/assets/NikosZorosPortofolio.png"
     />
 
     <!-- link tags -->
