--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="https://github.com/NikosZoros3533/Photographers-Portofolio"
+                  href="https://dio-vele.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
@@ -236,7 +236,7 @@
 
             <div class="project-wrapper__image">
               <a
-                href="https://github.com/NikosZoros3533/Photographers-Portofolio"
+                href="https://dio-vele.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
